--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/task_3.1.3
+spring.datasource.username=root
+spring.datasource.password=root
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=update
